--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
             <p class="leading-relaxed text-base">Transform your social media presence with our expert marketing strategies. Boost your brand's visibility, engage your audience, and drive conversions. Contact us now to learn more!</p>
           </div>
         </div>
+        <div class="xl:w-1/4 md:w-1/2 p-4">
+          <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
+            <img class="h-40 rounded w-full object-cover object-center mb-6" src="Webdev.jpg" alt="content">
+            <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Web Devlopment</h3>
+            <h2 class="text-lg text-white font-medium title-font mb-4">Website development</h2>
+            Build your online presence with a stunning website tailored to your unique needs. Our team of expert designers and developers will bring your vision to life, ensuring a seamless user experience for your audience. Get in touch today to elevate your online identity!          </div>
+        </div>
         <div class="flex flex-wrap -m-4">
             <div class="xl:w-1/4 md:w-1/2 p-4">
               <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
@@ -56,11 +63,10 @@
             </div>
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-800 bg-opacity-40 p-6 rounded-lg">
-            <img class="h-40 rounded w-full object-cover object-center mb-6" src="Webdev.jpg" alt="content">
-            <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Web Devlopment</h3>
-            <h2 class="text-lg text-white font-medium title-font mb-4">Website development</h2>
-            Build your online presence with a stunning website tailored to your unique needs. Our team of expert designers and developers will bring your vision to life, ensuring a seamless user experience for your audience. Get in touch today to elevate your online identity!          </div>
-        </div>
+            <img class="h-40 rounded w-full object-cover object-center mb-6" src="emailmarketing.jpg" alt="content">
+            <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">Email Marketing</h3>
+            <h2 class="text-lg text-white font-medium title-font mb-4">Email Advertising</h2>
+            Unlock the power of email advertising and take your marketing to the next level! Our comprehensive email advertising services are designed to help you connect with your target audience, build brand awareness, and drive conversions.        </div>
     </div>
   </section>
   <section class="text-gray-400 bg-gray-900 body-font">
